--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,18 @@ html {
 }
 
 body {
+  min-height: 100%;
+  background-color: #cacaca;
+}
+
+main {
+  flex: 1 1 auto;
+}
+
+#root {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
+  max-width: 1440px;
+  margin: 0 auto;
 }
